<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">EMPA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Eric González</string>
    <string name="nav_header_subtitle">contacto.empa2024@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- MENÚ -->

    <string name="menu_ini">Inicio</string>
    <string name="menu_pedidos">Pedidos</string>
    <string name="menu_ayuda">Ayudanos a mejorar</string>

    <!-- FRAGMENT INICIO -->

    <string name="txt_fragment_ini_1">B I E N V E N I D O</string>
    <string name="txt_fragment_ini_2">¿Qué vamos a ordenar?</string>
    <string name="btn_fragment_ini_1">C O M E N Z A R</string>
    <string name="img_fragment_ini_1">empa_logo</string>

    <!-- FRAGMENT PEDIDOS -->

    <string name="txt_fragment_ped_1">Para pedir, completa el formulario</string>
    <string name="txt_fragment_ped_2">Nombre: </string>
    <string name="nbr_fragment_ped_1">Grado: </string>
    <string name="txt_fragment_ped_3">Grupo: </string>
    <string name="txt_fragment_ped_4">Tipo: </string>
    <string name="nbr_fragment_ped_2">Cantidad: </string>
    <string name="txt_fragment_ped_5">Día: </string>
    <string name="txt_fragment_ped_6" tools:ignore="Typos">Los tipos disponibles por el momento son: Zarzamora con Queso y Hawaiana</string>
    <string name="txt_fragment_ped_7" tools:ignore="Typos">Los días disponibles por el momento son: Lunes, Jueves y Viernes</string>
    <string name="btn_fragment_ped_1">Realizar Pedido</string>
    <string name="edt_nbr_fragment_ped_1">ej. 3</string>
    <string name="edt_nbr_fragment_ped_2">ej. 2</string>
    <string name="txt_fragment_ped_8">Tipo: </string>
    <string name="txt_fragment_ped_9">En caso de pedir más de un sabor coloque el segundo tipo, caso contrario deje en blanco</string>
    <string name="edt_txt_fragment_ped_1">ej. Zarzamora Con Queso</string>
    <string name="txt_fragment_ped_11">Cantidad: </string>
    <string name="edt_nbr_fragment_ped_3">ej. 3</string>

    <!-- FRAGMENT AYUDANOS -->
    <string name="txt_fragment_ayd_1">¿Quieres ayudarnos a mejorar?</string>
    <string name="txt_fragment_ayd_2">Contactanos</string>
    <string name="txt_fragment_ayd_3">contacto.empa2024@gmail.com</string>
    <string name="txt_fragment_ayd_4">Tus comentarios nos ayudan a mejorar nuestro servicio, gracias por tu confianza</string>
    <string name="txt_fragment_ayd_5">©EMPA, Todos los derechos reservados</string>
    <string name="txt_fragment_ayd_6">Aplicación desarrollada por: Eric González</string>
    
</resources>