<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.empa.ui.home.HomeFragment"
        android:label="@string/menu_ini"
        tools:layout="@layout/fragment_inicio" >
        <action
            android:id="@+id/action_nav_inicio_to_nav_pedidos"
            app:destination="@id/nav_pedidos"
            app:popUpTo="@id/nav_inicio"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_pedidos"
        android:name="com.example.empa.ui.gallery.GalleryFragment"
        android:label="@string/menu_pedidos"

        tools:layout="@layout/fragment_pedidos" />

    <fragment
        android:id="@+id/nav_ayuda"
        android:name="com.example.empa.ui.help.AyudaFragment"
        android:label="@string/menu_ayuda"
        tools:layout="@layout/fragment_ayuda" />

</navigation>