<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.help.AyudaFragment">

    <TextView
        android:id="@+id/txtFragmentAyd1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_fragment_ayd_1"
        android:textSize="@dimen/txt_titulos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123" />

    <TextView
        android:id="@+id/txtFragmentAyd2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_fragment_ayd_2"
        android:textSize="@dimen/txt_titulos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.232" />

    <TextView
        android:id="@+id/txtFragmentAyd3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_fragment_ayd_3"
        android:textSize="@dimen/txt_titulos"
        android:textIsSelectable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336" />

    <TextView
        android:id="@+id/txtFragmentAyd4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_fragment_ayd_4"
        android:textAlignment="center"
        android:textSize="@dimen/txt_subtitu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472" />

    <TextView
        android:id="@+id/txtFragmentAyd5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_fragment_ayd_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.913" />

    <TextView
        android:id="@+id/txtFragmentAyd6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_fragment_ayd_6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.949" />
</androidx.constraintlayout.widget.ConstraintLayout>