<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment">

    <TextView
        android:id="@+id/txtFragmentPed1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_fragment_ped_1"
        android:textAlignment="center"
        android:textSize="@dimen/txt_subtitu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <TextView
        android:id="@+id/txtFragmentPed2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_fragment_ped_2"
        android:textSize="@dimen/txt_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.227" />

    <TextView
        android:id="@+id/txtFragmentPed3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nbr_fragment_ped_1"
        android:textSize="@dimen/txt_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.296" />

    <TextView
        android:id="@+id/txtFragmentPed4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_fragment_ped_3"
        android:textSize="@dimen/txt_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.357" />

    <TextView
        android:id="@+id/txtFragmentPed5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_fragment_ped_4"
        android:textSize="@dimen/txt_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42" />

    <TextView
        android:id="@+id/txtFragmentPed6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nbr_fragment_ped_2"
        android:textSize="@dimen/txt_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.485" />

    <TextView
        android:id="@+id/txtFragmentPed7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_fragment_ped_5"
        android:textSize="@dimen/txt_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547" />

    <EditText
        android:id="@+id/editTxtPed1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="ej. Eric González"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22"
        tools:ignore="Autofill,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,HardcodedText,LabelFor,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editNbrPed1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/edt_nbr_fragment_ped_1"
        app:layout_constraintStart_toStartOf="@+id/editTxtPed1"
        app:layout_constraintTop_toBottomOf="@+id/editTxtPed1"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTxtPed2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="ej. C1"
        app:layout_constraintStart_toStartOf="@+id/editNbrPed1"
        app:layout_constraintTop_toBottomOf="@+id/editNbrPed1"
        tools:ignore="Autofill,HardcodedText,LabelFor,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTxtPed3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="ej. Hawaiana"
        app:layout_constraintStart_toStartOf="@+id/editTxtPed2"
        app:layout_constraintTop_toBottomOf="@+id/editTxtPed2"
        tools:ignore="Autofill,HardcodedText,LabelFor,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editNbrPed2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/edt_nbr_fragment_ped_2"
        app:layout_constraintStart_toStartOf="@+id/editTxtPed3"
        app:layout_constraintTop_toBottomOf="@+id/editTxtPed3"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTxtPed4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="ej. Jueves"
        app:layout_constraintStart_toStartOf="@+id/editNbrPed2"
        app:layout_constraintTop_toBottomOf="@+id/editNbrPed2"
        tools:ignore="Autofill,HardcodedText,LabelFor,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/txtFragmentPed8"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:text="@string/txt_fragment_ped_6"
        android:textSize="@dimen/txt_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.674"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/txtFragmentPed9"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:text="@string/txt_fragment_ped_7"
        android:textSize="@dimen/txt_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFragmentPed8"
        app:layout_constraintVertical_bias="0.074"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_fragment_ped_1"
        android:textSize="@dimen/txt_btns"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859" />
</androidx.constraintlayout.widget.ConstraintLayout>